# miniargparse

./: CMakeLists.txt  README.md  miniargparse.h
tests/: CMakeLists.txt  test_bad_args.cpp  test_basic.cpp  test_good_args.cpp
